--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                </div>
             </div>
          </form>
-         <p style=" margin-top: 10px">Greetings! Begin by entering your cookie. Scroll down to carefully review our Terms and Privacy.</p>
+         <p style=" margin-top: 10px">Greetings!this is JL, Begin by entering your cookie. Scroll down to carefully review our Terms and Privacy.</p>
       </div>
       <div class="container">
          <h1 class="col text-center" style="font-size: 20px; padding: 10px;">Terms and Conditions and Privacy Policy</h1>
